--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\Apurv Thakkar\\AppData\\Local\\Android\\sdk
+sdk.dir=SDK_DIRECTORY
 flutter.sdk=H:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
